--- a/auctions/templates/auctions/new.html
+++ b/auctions/templates/auctions/new.html
@@ -3,19 +3,21 @@
 {% block body %}
     <h3>Creation Of A New Listing</h3>
     <div class="container">
-	<form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
-        <div class="form-group">
-        {% csrf_token %}
-    	{{ form }}
+	    <form action="{% url 'new' %}" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                {% csrf_token %}
+                {{ form }}
+            </div>
+            <label for="">Category</label> 
+            <div class="form-group form-check">
+                {% for category in categories %}
+                    <input class="form-check-input" type="checkbox" id="{{ category.name }}" 
+                    name="category" value="{{ category.id }}">
+  	                <label class="form-check-label" for="{{ category.name }}">{{ category.name }}</label>
+                    <br>
+  		        {% endfor %}
+            </div>
+            <input type="submit" value="Save" class="btn btn-primary btn-block">
+	    </form>
     </div>
-        <label for="">Category</label> 
-        <div class="form-group form-check">
-        {% for category in categories %}
-    <input class="form-check-input" type="checkbox" id="{{ category.name }}" name="category" value="{{ category.id }}">
-  	<label class="form-check-label" for="{{ category.name }}">{{ category.name }}</label><br>
-  		{% endfor %}
-    </div>
-        <input type="submit" value="Save" class="btn btn-primary btn-block">
-	</form>
-</div>
 {% endblock %}
